fix weird box shadow on Firefox and set static height for text height for firefox

--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -16,6 +16,8 @@
   font-size: 18px;
   font-family: 'Roboto';
 
+  box-shadow: none;
+
   width: 100%;
 
   outline: 0;
