--- a/src/components/TypingText/typing-text.scss
+++ b/src/components/TypingText/typing-text.scss
@@ -6,7 +6,7 @@
   bottom: 0;
 
   width: fit-content;
-  height: fit-content;
+  height: 100px;
   margin: auto;
 
   font-family: 'Montserrat';
